--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏢</text></svg>" />
     <title>上場企業グリッド</title>
     <style>
         .grid {
@@ -71,6 +73,8 @@
 </head>
 
 <body>
+    <a href="https://github.com/buzomo/ja-listed-company-grid/edit/main/index.html"
+        style="text-decoration:none;position:absolute;right:13px;bottom:0;color:orange">edit now</a>
     <div class="controls">
         <label><input type="checkbox" id="filter-prime" checked> プライム</label>
         <label><input type="checkbox" id="filter-standard" checked> スタンダード</label>
