--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <body>
     <a href="https://github.com/buzomo/ja-listed-company-grid/edit/main/index.html"
-        style="text-decoration:none;position:absolute;right:13px;bottom:0;color:orange">edit now</a>
+        style="text-decoration:none;position:fixed;right:13px;bottom:0;color:orange">edit now</a>
     <div class="controls">
         <label><input type="checkbox" id="filter-prime" checked> プライム</label>
         <label><input type="checkbox" id="filter-standard" checked> スタンダード</label>
